--- a/sample_jp.ipynb
+++ b/sample_jp.ipynb
@@ -16,6 +16,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Enter your prompt here\n",
+    "myprompt = \"A man is the swordking.\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -35,7 +45,7 @@
     "# -----------------------------------------------------------------------------\n",
     "init_from = 'resume' # either 'resume' (from an out_dir) or a gpt2 variant (e.g. 'gpt2-xl')\n",
     "out_dir = 'out-mk-src' # ignored if init_from is not 'resume'\n",
-    "start = \"A man is the swordking.\" # or \"<|endoftext|>\" or etc. Can also specify a file, use as: \"FILE:prompt.txt\"\n",
+    "start = myprompt # or \"<|endoftext|>\" or etc. Can also specify a file, use as: \"FILE:prompt.txt\"\n",
     "num_samples = 1 # number of samples to draw\n",
     "max_new_tokens = 500 # number of tokens generated in each sample\n",
     "temperature = 0.8 # 1.0 = no change, < 1.0 = less random, > 1.0 = more random, in predictions\n",
