--- a/sample_jp.ipynb
+++ b/sample_jp.ipynb
@@ -292,8 +292,18 @@
     }
    ],
    "source": [
-    "# Generate prompt for creating image with\n",
+    "# Generate prompt for creating image with OpenJourney\n",
     "prompt = run_sample_ojprompt(myprompt)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Open Journey\n",
+    "\n",
+    "The generated prompt as an input for OpenJourney"
    ]
   },
   {
@@ -321,7 +331,6 @@
     "pipe = pipe.to(\"cuda\")\n",
     "\n",
     "folder_path = \"output/\"\n",
-    "\n",
     "image = pipe(prompt).images[0]\n",
     "image.save(os.path.join(folder_path, myprompt + \".png\"))\n"
    ]
